--- a/proje/templates/chat.html
+++ b/proje/templates/chat.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #001a22;
-            color: #ffffff;
+            background-color: #0c4646;
+            color: antiquewhite;
         }
         .chat-container {
             display: flex;
@@ -16,8 +16,8 @@
         }
         .user-list {
             width: 25%;
-            background-color: #001a22;
-            border-right: 1px solid #3a3a3a;
+            background-color: #0c4646;
+            border-right: 1px solid #d2f2ed;
             overflow-y: auto;
         }
         .user {
@@ -26,7 +26,7 @@
             cursor: pointer;
         }
         .user.active {
-            background-color: #756e04;
+            background-color: #e6580b;
             font-weight: bold;
         }
         .chat-box {
@@ -38,8 +38,8 @@
             flex-grow: 1;
             padding: 10px;
             overflow-y: auto;
-            background-color: #043645;
-            color: #ffffff;
+            background-color: #238080;
+            color: antiquewhite;
         }
         .input-group {
             padding: 10px;
@@ -61,7 +61,7 @@
     }
 
     .message-right {
-        color: #ffffff;
+        color: antiquewhite;
         text-align: right;
         align-self: flex-end;
     }
@@ -81,10 +81,11 @@
 
         <!-- Mesajlaşma Alanı -->
         <div class="chat-box">
+            
             <div id="messages" style="display: flex; flex-direction: column;"></div>
             <div class="input-group">
                 <input type="text" id="message" class="form-control" placeholder="Mesajınızı yazın...">
-                <button class="btn btn-success" onclick="sendMessage()">Gönder</button>
+                <button class="btn btn-success" style="background-color: #e6580b;" onclick="sendMessage()">Gönder</button>
             </div>
         </div>
     </div>
