--- a/proje/templates/login.html
+++ b/proje/templates/login.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #043645;
+            background-color: #0c4646;
             color: antiquewhite;
             min-height: 100vh;
             display: flex;
@@ -15,7 +15,7 @@
             align-items: center;
         }
         .logincontainer {
-            background-color: #0f3946;
+            background-color: #238080;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
             width: 80%;
@@ -28,13 +28,14 @@
     
 
     <div class="container">
+        <h1 style="text-align: center;" class="mb-4">Vatsap'a Hoş Geldiniz</h1>
         <div class="container text-center logincontainer">
             <h1 class="mb-4">Kullanıcı Adı Belirle</h1>
             <form method="POST" class="d-flex flex-column align-items-center">
                 <div class="mb-3 w-100">
                     <input type="text" name="username" class="form-control" placeholder="Kullanıcı adınızı girin" required>
                 </div>
-                <button type="submit" class="btn btn-danger">Giriş</button>
+                <button type="submit" class="btn btn-danger" style="background-color: #e6580b ;">Giriş</button>
             </form>
         </div>
 
